tests/snapshots/snapshot__fixtures@m34__cluster_outtree.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/m34/cluster_outtree.sas
---
==== LOG ====

1     title 'PROC CLUSTER OUTTREE=';

2     data pts;
3       input name $ x y;
4     datalines;
5     P1 1 1
6     P2 1 2
7     P3 8 8
8     P4 9 8
9     P5 9 9
10    ;
NOTE: The data set WORK.PTS has 5 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

11    proc cluster data=pts method=average outtree=tree;
12      var x y;
13      id name;
14    run;
NOTE: There were 5 observations read from the data set WORK.PTS.
NOTE: The data set WORK.TREE has 9 observations and 7 variables.
NOTE: PROCEDURE CLUSTER used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

15    proc print data=tree noobs; run;
NOTE: There were 9 observations read from the data set WORK.TREE.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

16    title;

==== LISTING ====
                                     PROC CLUSTER OUTTREE=

                                     The CLUSTER Procedure
                                Average Linkage Cluster Analysis

                                        Cluster History

                   NCl    Clusters Joined           Freq     SPRSQ       RSQ

                     4                 P1    P2        2    0.0039    0.9961
                     3                 P3    P4        2    0.0039    0.9922
                     2                CL3    P5        3    0.0065    0.9857
                     1                CL4    CL2       5    0.9857    0.0000


                                     PROC CLUSTER OUTTREE=

                 _NAME_    _PARENT_    _NCL_    _FREQ_       _HEIGHT_    x    y

                 P1        CL4             .         1              0    1    1
                 P2        CL4             .         1              0    1    2
                 P3        CL3             .         1              0    8    8
                 P4        CL3             .         1              0    9    8
                 P5        CL2             .         1              0    9    9
                 CL4       CL1             4         2    0.003894081    .    .
                 CL3       CL2             3         2    0.007788162    .    .
                 CL2       CL1             2         3    0.014278297    .    .
                 CL1                       1         5              1    .    .

==== EXIT 0 ====
