tests/snapshots/snapshot__fixtures@m34__genmod_gamma_class.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/m34/genmod_gamma_class.sas
---
==== LOG ====

1     title 'PROC GENMOD: Gamma regression with CLASS predictor';

2     data g;
3       input grp $ y;
4       datalines;
5     A 2
6     A 4
7     A 6
8     B 10
9     B 20
10    B 30
11    ;
NOTE: The data set WORK.G has 6 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

12    proc genmod data=g;
13      class grp;
14      model y = grp / dist=gamma link=log;
15    run;
NOTE: There were 6 observations read from the data set WORK.G.
NOTE: There were 6 observations used.
NOTE: PROCEDURE GENMOD used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

16    title;

==== LISTING ====
                       PROC GENMOD: Gamma regression with CLASS predictor

                                      The GENMOD Procedure

                                       Model Information



                                  Data Set              WORK.G
                                  Response Variable     y
                                  Distribution          Gamma
                                  Link Function         Log
                                  Dependent Variable    y
                                  Observations Used     6

                                    Class Level Information

                                   Class    Levels    Values

                                   grp           2    A B

                                    Model Convergence Status

     Convergence criterion (XCONV=1E-8) satisfied.

                             Criteria For Assessing Goodness Of Fit

                     Criterion                   DF       Value    Value/DF

                     Deviance                     4      1.1507      0.2877
                     Scaled Deviance              4      4.6029      1.1507
                     Pearson Chi-Square           4      1.0000      0.2500
                     Scaled Pearson X2            4      4.0000      1.0000
                     Log Likelihood                    -16.3517
                     Full Log Likelihood               -16.3517
                     AIC (smaller is better)            36.7033
                     AICC (smaller is better)           40.7033
                     BIC (smaller is better)            36.2868

                       Analysis Of Maximum Likelihood Parameter Estimates

Parameter    DF    Estimate    Standard Error    Wald 95% Confidence Limits Lower    Wald 95% Confidence Limits Upper    Wald Chi-Square    Pr > ChiSq

Intercept     1      2.9957            0.2887                              2.4299                              3.5615           107.6929        <.0001
grp A         1     -1.6094            0.4082                             -2.4096                             -0.8093            15.5417        <.0001
grp B         0      0.0000            0.0000                              0.0000                              0.0000                  .             .
Scale         4      4.0000            1.4142                              1.2281                              6.7719                  .             .

==== EXIT 0 ====
