tests/snapshots/snapshot__fixtures@m34__logistic_class_output.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/m34/logistic_class_output.sas
---
==== LOG ====

1     title 'PROC LOGISTIC: CLASS predictor with OUTPUT OUT=';

2     data counts;
3       input y x count;
4       datalines;
5     1 1 20
6     1 0 10
7     0 1  5
8     0 0 25
9     ;
NOTE: The data set WORK.COUNTS has 4 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

10    proc logistic data=counts;
11      class x;
12      model y(descending) = x;
13      freq count;
14      output out=pred predicted=phat;
15    run;
NOTE: There were 4 observations read from the data set WORK.COUNTS.
WARNING: CLASS variable X is coded with PARAM=REF; the SAS default PARAM=EFFECT is not supported in PROC LOGISTIC. The CLASS parameter estimates differ from SAS, the odds ratios are identical (planned: roadmap-avancee J05-P2). Specify PARAM=REF to request this coding.
NOTE: There were 60 observations used.
NOTE: The data set WORK.PRED has 4 observations and 4 variables.
NOTE: PROCEDURE LOGISTIC used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

16    proc print data=pred noobs;
17    run;
NOTE: There were 4 observations read from the data set WORK.PRED.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

18    title;

==== LISTING ====
                        PROC LOGISTIC: CLASS predictor with OUTPUT OUT=

                                     The LOGISTIC Procedure

                                       Model Information



                          Data Set                     WORK.COUNTS
                          Response Variable            y
                          Number of Response Levels    2
                          Model                        binary logit
                          Optimization Technique       Newton-Raphson

                                    Class Level Information

                                         Class    Value

                                         x        0 1

                                        Response Profile

                             Ordered Value    y    Total Frequency

                                         1    1                 30
                                         2    0                 30

PROC LOGISTIC is modeling the probability that y=1.

                                    Model Convergence Status

     Convergence criterion (XCONV=1E-8) satisfied.

                                      Model Fit Statistics

                    Criterion    Intercept Only    Intercept and Covariates

                    AIC                 85.1777                     70.8990
                    SC                  87.2720                     75.0877
                    -2 Log L            83.1777                     66.8990

                             Testing Global Null Hypothesis: BETA=0

                       Test                Chi-Square    DF    Pr > ChiSq

                       Likelihood Ratio       16.2787     1        <.0001
                       Score                  15.4286     1        <.0001
                       Wald                   13.5946     1        0.0002

                            Analysis of Maximum Likelihood Estimates

         Parameter    DF    Estimate    Standard Error    Wald Chi-Square    Pr > ChiSq

         Intercept     1      1.3863            0.5000             7.6872        0.0056
         x 0           1     -2.3026            0.6245            13.5946        0.0002

                                      Odds Ratio Estimates

                         Effect      Point Estimate     Lower     Upper

                         x 0 vs 1            0.1000    0.0294    0.3401

                        PROC LOGISTIC: CLASS predictor with OUTPUT OUT=

                                y    x    count            phat

                                1    1       20             0.8
                                1    0       10    0.2857142857
                                0    1        5             0.8
                                0    0       25    0.2857142857

==== EXIT 1 ====
